# event-playlist-generator

./: .env.example  .gitignore  CLAUDE_CODE_HANDOFF.MD  README.md  REFERENCES.md  pyproject.toml  resolution_cache.seed.json
app/: config.py  main.py  persistence.py
app/arc/: curve.py  models.py  presets.py  sequencer.py
app/llm/: candidates.py  prompt.py
app/spotify/: auth.py  client.py
app/static/: app.js  index.html  styles.css
scripts/: print_candidates.py  print_sample_arc.py  resolve_tracks.py  seed_cache.py
tests/: conftest.py  test_auth.py  test_candidates.py  test_client.py  test_curve.py  test_main.py  test_models.py  test_persistence.py  test_presets.py  test_prompt.py  test_sequencer.py
